[metadata]
name = reixs
version = 0.6.4
author = Patrick Braun
author_email = patrick.braun@usask.ca
description = Library to analyse, plot, and export data taken at the REIXS Beamline at the Canadian Light Source, Saskatoon, Canada.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmb399/REIXSAnalysis
project_urls =
    Bug Tracker = https://github.com/pmb399/REIXSAnalysis
    Beamline Information = https://reixs.lightsource.ca
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas>1.5.0
    bokeh>=2.3.3,<3
    scipy
    ipywidgets
    ipyfilechooser
    h5py
    shapely
[options.packages.find]
where = src
